gitops/components/rustfs/rustfs.yaml
---
# Source: rustfs/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-svc
  namespace: rustfs
  labels:
    helm.sh/chart: rustfs-1.0.0-rc.2
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/version: "1.0.0-rc.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: endpoint
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/instance: rustfs
---
# Source: rustfs/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustfs
  namespace: rustfs
  labels:
    helm.sh/chart: rustfs-1.0.0-rc.2
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/instance: rustfs
    app.kubernetes.io/version: "1.0.0-rc.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rustfs
      app.kubernetes.io/instance: rustfs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rustfs
        app.kubernetes.io/instance: rustfs
    spec:
      serviceAccountName: rustfs
      imagePullSecrets:
        []
      affinity:
      priorityClassName: 
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsUser: 10001
      containers:
        - name: rustfs
          image: "rustfs/rustfs:1.0.0-rc.2"
          command: ["/usr/bin/rustfs"]
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - name: endpoint
              containerPort: 9000
            - name: console
              containerPort: 9001
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rustfs-data
